20240107 2023作品更新(不包含台積電專案)

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -118,11 +118,10 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
-									<!-- 2023_10 -->
+									<!-- 2023 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\1080x1920.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_9to12\336x280a.jpg" style="width:100%" class="image">
-									<!-- 2023_9 -->
 									<img src="img\digitimes\ad\ad\2023_9to12\336X280.gif" style="width:100%" class="image">
-									<!-- 2023_8月前 -->
 									<img src="img\digitimes\ad\ad\2023_3to7\FB.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\2023_3to7\限動.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\2023_3to7\1120697R5_1080-1080-11.jpg" style="width:100%"
@@ -147,23 +146,21 @@
 								<div class="Ad_item" data-cat="edm">
 									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\edm\2023_8\edm2.jpg" style="width:100%" class="image">
-									<!-- 2023_7月前 -->
-									<img src="img\digitimes\ad\edm\2023_3to7\1120630edm.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\edm\2023_9to12\edm_asia.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中1行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
-									<!-- 2023_10 -->
+									<!-- 2023 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\digikey.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\2023_9to12\microsoft365.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_9to12\v2.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\2023_9to12\728-x-90.gif" style="width:100%" class="image">
-									<!-- 2023_9 -->
 									<img src="img\digitimes\ad\ad\2023_9to12\1121655.gif" style="width:100%" class="image">
-									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\ad\2023_8\728-x-90.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\1080x1080.jpg" style="width:100%">
-									<!-- 2023_7月前 -->
 									<img src="img\digitimes\ad\ad\2023_3to7\800X320.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1121294-1_336-280.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1121294-1_336-90.gif" style="width:100%">
@@ -175,7 +172,7 @@
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
 									<!-- 2023_8 -->
-									<img src="img\digitimes\ad\print_ad\2023_8\1121137R4.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\print_ad\2023_8\1121137R4.jpg" style="width:100%">
 									<!-- 2023_7月前 -->
 									<img src="img\digitimes\ad\print_ad\2023_3to7\智慧機械與智動化_全十.jpg" style="width:100%">
 									<img src="img\digitimes\ad\print_ad\2023_3to7\amr全十.jpg" style="width:100%">
@@ -184,23 +181,22 @@
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
 									<!-- 2023_10 -->
-									<img src="img\digitimes\ad\edm\2023_9to12\edm_TechStats.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\edm\2023_9to12\edm_TechStats.jpg" style="width:100%">
 									<!-- 2023_8 -->
-									<img src="img\digitimes\ad\edm\2023_8\Asia問卷調查EDM中文.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\edm\2023_8\Asia問卷調查EDM中文.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中2行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
-									<!-- 2023_10 -->
-									<img src="img\digitimes\ad\ad\2023_9to12\600x90a.jpg" style="width:100%" class="image">
-									<!-- 2023_9 -->
-									<img src="img\digitimes\ad\ad\2023_9to12\720 x 480.jpg" style="width:100%" class="image">
-									<!-- 2023_8 -->
+									<!-- 2023 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\B.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\2023_9to12\728X90_V1_A.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\2023_9to12\veeam.jpg" style="width:100%">
+									<img src="img\digitimes\ad\ad\2023_9to12\720 x 480.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\支付在手2.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\728-H90.gif" style="width:100%">
-									<!-- 2023_7月前 -->
 									<img src="img\digitimes\ad\ad\2023_3to7\1120968_R2.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1121043_336 x 90b.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1120853_960x100.jpg" style="width:100%">
@@ -208,8 +204,8 @@
 									<img src="img\digitimes\ad\ad\2023_3to7\1120570_336-280矩形大方塊.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1120718.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1120746_728_90.gif" style="width:100%">
-									<img src="img\digitimes\ad\ad\2023_3to7\1120683_728-90.gif" style="width:100%" class="image">
-									<img src="img\digitimes\ad\ad\2023_3to7\1120781.gif" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\2023_3to7\1120683_728-90.gif" style="width:100%">
+									<img src="img\digitimes\ad\ad\2023_3to7\1120781.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\康耐視台中Banner.gif" style="width:100%">
 								</div>
 								<!-- 平面廣告 -->
@@ -222,9 +218,8 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
-									<!-- 2023_8 -->
-									<img src="img\digitimes\ad\edm\2023_8\Asia客戶問卷調查EDM.jpg" style="width:100%" class="image">
-									<!-- 2023_7月前 -->
+									<!-- 2023 -->
+									<img src="img\digitimes\ad\edm\2023_8\Asia客戶問卷調查EDM.jpg" style="width:100%">
 									<img src="img\digitimes\ad\edm\2023_3to7\0315西門子EDA2.jpg" style="width:100%">
 								</div>
 							</div>
@@ -232,14 +227,12 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
-									<!-- 2023_10 -->
-									<img src="img\digitimes\ad\ad\2023_9to12\1920x1080.jpg" style="width:100%" class="image">
-									<!-- 2023_9 -->
+									<!-- 2023 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\1080x1920_Jessie.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\2023_9to12\1027-1920x1080.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\2023_9to12\1200X1200.jpg" style="width:100%" class="image">
-									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\ad\2023_8\亞灣雲平台1.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\1121283R1_fb.jpg" style="width:100%">
-									<!-- 2023_7月前 -->
 									<img src="img\digitimes\ad\ad\2023_3to7\1121203R2_Keynote banner-1200-600.jpg"
 										style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_3to7\1121023.jpg" style="width:100%" class="image">
@@ -261,9 +254,10 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
-									<!-- 2023_7月前 -->
-									<img src="img\digitimes\ad\edm\2023_3to7\1121017R1.jpg" style="width:100%">
-									<img src="img\digitimes\ad\edm\2023_3to7\edm.jpg" style="width:100%">
+									<!-- 2023前 -->
+									<img src="img\digitimes\ad\edm\2023_9to12\1122607.jpg" style="width:100%">
+									<img src="img\digitimes\ad\edm\2023_9to12\412625.jpg" style="width:100%">
+									<img src="img\digitimes\ad\edm\2023_9to12\edm_ondemand.jpg" style="width:100%">
 								</div>
 							</div>
 
@@ -295,8 +289,9 @@
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
+				<!-- 2023_12 -->
+				<img src="img\digitimes\kv\2023_9to12\crypto.jpg" style="width:100%" class="image">
 				<!-- 2023_7月前 -->
-				<img src="img\digitimes\kv\2023_3to8\1121020R2.jpg" style="width:100%" class="image">
 				<img src="img\digitimes\kv\2023_3to8\1120776-1.jpg" style="width:100%">
 				<img src="" style="width:100%">
 			</div>
@@ -324,46 +319,57 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="print">
-									<img src="img\digitimes\layout\print\2023_3to7\1121373凱德.jpg"style="width:100%" class="image">
-									<img src="img\digitimes\layout\print\2023_3to7\1120998R2_2.jpg"style="width:100%" class="image">
-									<img src="img\digitimes\layout\print\2023_3to7\1120632邁達特.jpg"style="width:100%" class="image">
+									<img src="img\digitimes\layout\print\2023_3to7\1121373凱德.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2023_3to7\1120998R2_2.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2023_3to7\1120632邁達特.jpg"style="width:100%">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
+									<img src="img\digitimes\layout\digital\2023_8to12\正式議程-林思怡.png"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\議程.jpg"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\黃逸平.jpg"style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121171.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121058.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1120944活動預告字卡.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1120786.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\0317SiFive.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_3to7\0412DWebinar.jpg" style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_3to7\泓格線上論壇_影片背景.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中1行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
+									<img src="img\digitimes\layout\print\2023_8to12\E03-電子看板_議程.jpg"style="width:100%" class="image">
+									<img src="img\digitimes\layout\print\2023_8to12\a.jpg"style="width:100%" class="image">
 									<img src="img\digitimes\layout\print\2023_3to7\凱德PARTNER.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120930研杰.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120632邁達特1.jpg"style="width:100%">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
+									<img src="img\digitimes\layout\digital\2023_8to12\7.jpg"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\子母_安全3.jpg"style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121187.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1120944.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1120916_片頭.jpg" style="width:100%">
-									<img src="img\digitimes\layout\digital\2023_3to7\0412DWebinar.jpg" style="width:100%">
-									<img src="img\digitimes\layout\digital\2023_3to7\泓格線上論壇_影片背景.jpg" style="width:100%">
 								</div>
 							</div>
 							<!-- 中2行 -->
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
+									<img src="img\digitimes\layout\print\2023_8to12\背板10-1.jpg"style="width:100%" class="image">
 									<img src="img\digitimes\layout\print\2023_3to7\1121109R1_背板.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120880新立.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120532Mouser_背板.jpg"style="width:100%">
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
+									<img src="img\digitimes\layout\digital\2023_8to12\道安ppt.jpg"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\醫電PPT.jpg"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\renesas-PPT.jpg"style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\ADI片尾字卡.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121089.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121052_內頁2.jpg" style="width:100%">
@@ -382,6 +388,9 @@
 								</div>
 								<!-- digital -->
 								<div class="ly_item" data-cat="digital">
+									<img src="img\digitimes\layout\digital\2023_8to12\智慧城鄉-PPT.jpg"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\teams-PPT.jpg"style="width:100%">
+									<img src="img\digitimes\layout\digital\2023_8to12\teams-PPT2.jpg"style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\cta_片頭.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121089_E09.jpg" style="width:100%">
 									<img src="img\digitimes\layout\digital\2023_3to7\1121052_內頁3.jpg" style="width:100%">
