更新4到6月作品+更新動畫專案 檔案輕量化

--- a/Vedio.html
+++ b/Vedio.html
@@ -92,17 +92,23 @@
 					</div>
 				</div>
 				<div class="container">
-					<img src="img/video/TSF2023_1.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_1選票篇.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
 				</div>
-				<!-- <div class="container">
-					<img src="img/video/TSF2023_4.jpg" style="width:100%" class="image">
+				<div class="container">
+					<img src="img/video/TSF2023_3旗海飄揚篇.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
-				</div> -->
+				</div>
+				<div class="container">
+					<img src="img/video/TSF2023_4布條篇.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
+					</div>
+				</div>
 				<div class="container">
 					<img src="img/video/RenderSoul.jpg" style="width:100%" class="image">
 					<div class="overlay">
@@ -119,27 +125,21 @@
 			<!-- 中行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/video/TSF2023_1選票篇.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_1.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
 				</div>
-				<!-- <div class="container">
-					<img src="img/video/TSF2023_3旗海飄揚篇.jpg" style="width:100%" class="image">
+				<div class="container">
+					<img src="img/video/TSF2023_4.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
-				</div> -->
-				<!-- <div class="container">
+				</div>
+				<div class="container">
 					<img src="img/video/TSF2023_2.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
-					</div>
-				</div> -->
-				<div class="container">
-					<img src="img/video/goldfish_1.00_00_09_07.Still004.jpg" style="width:100%" class="image">
-					<div class="overlay">
-						<a href="https://twitter.com/AsusMetaverse/status/1708741773999387046?s=20"  target="_blank"><div class="text">《金魚腦》<br>動畫<br>2023</div></a>
 					</div>
 				</div>
 				<div class="container">
@@ -157,12 +157,18 @@
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
-				<!-- <div class="container">
-					<img src="img/video/TSF2023_4布條篇.jpg" style="width:100%" class="image">
+				<div class="container">
+					<img src="img/video/2024全球百大目的地故事-雲林.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
+						<a href="https://youtu.be/TzltKxdxZ34"  target="_blank"><div class="text">《全球百大目的地故事-雲林》<br>影片剪輯<br>2024</div></a>
 					</div>
-				</div> -->
+				</div>
+				<div class="container">
+					<img src="img/video/goldfish_1.00_00_09_07.Still004.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://twitter.com/AsusMetaverse/status/1708741773999387046?s=20"  target="_blank"><div class="text">《金魚腦》<br>動畫<br>2023</div></a>
+					</div>
+				</div>
 				<div class="container">
 					<img src="img/video/傳播節短片.jpg" style="width:100%" class="image">
 					<div class="overlay">
