輕量化檔案

--- a/2023_tsmc_ani.html
+++ b/2023_tsmc_ani.html
@@ -78,7 +78,7 @@
         <!-- title -->
         <div style=" padding:50px 10px 10px">
             <!-- 中文 -->
-            <h1 class="Center" style="color:#666666">DIGITIMES INC.<br>動畫教案素材製作</h1>
+            <h1 class="Center" style="color:#666666">DIGITIMES INC.<br>教案動畫視覺</h1>
             <hr>
         </div>
 
