--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -170,6 +170,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2024 7到9月 -->
+									<img src="img\digitimes\ad\print_ad\2024_7to9\1130167全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\print_ad\2024_4to6\1130474 TI_全十.jpg" style="width:100%">
 									<!-- 2023 -->
@@ -180,6 +182,8 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
+									<!-- 2024 7到9月 -->
+									<img src="img\digitimes\ad\edm\2024_7to9\網頁.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
 									<img src="img\digitimes\ad\edm\2024_1to3\網頁layout.jpg" style="width:100%">
 									<!-- 2023 -->
@@ -220,6 +224,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2024 7到9月 -->
+									<img src="img\digitimes\ad\print_ad\2024_7to9\全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\print_ad\2024_4to6\1130350_1.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
@@ -335,6 +341,8 @@
 		<div class="w3-row-padding tabcontent margin-right-left" id="kv">
 			<!-- 左行 -->
 			<div class="w3-third">
+				<!-- 2024_7 -->
+				<img src="img\digitimes\kv\2024_7to9\桌機Banner 2.jpg" style="width:100%" class="image">
 				<!-- 2024_6 -->
 				<img src="img\digitimes\kv\2024_4to6\ic萌寵特別企劃.jpg" style="width:100%" class="image">
 				<!-- 2023_12 -->
@@ -360,12 +368,15 @@
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
+				<!-- 2024_8 -->
+				<img src="img\digitimes\kv\2024_7to9\主視覺.jpg" style="width:100%" class="image">
+				<img src="img\digitimes\kv\2024_7to9\b.jpg" style="width:100%" class="image">
 				<!-- 2024_1 -->
 				<img src="img\digitimes\kv\2024_1to3\b.jpg" style="width:100%" class="image">
 				<!-- 2024_1 -->
 				<img src="img\digitimes\kv\2024_1to3\cut3A.jpg" style="width:100%" class="image">
 				<!-- 2023_7月前 -->
-				<img src="img\digitimes\kv\2023_3to8\1120776-1.jpg" style="width:100%">
+				<!-- <img src="img\digitimes\kv\2023_3to8\1120776-1.jpg" style="width:100%"> -->
 				<img src="" style="width:100%">
 			</div>
 		</div>
@@ -392,6 +403,9 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="print">
+									<img src="img\digitimes\layout\print\2024_7to9\B01_STAFF_示意.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2024_7to9\Z05_菜單全.jpg"style="width:100%">
+									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_3to7\1121373凱德.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120998R2_2.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120632邁達特.jpg"style="width:100%">
@@ -417,6 +431,9 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
+									<img src="img\digitimes\layout\print\2024_7to9\B01_VIP_示意.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2024_7to9\邀請函內頁.jpg"style="width:100%">
+									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_8to12\E03-電子看板_議程.jpg"style="width:100%" class="image">
 									<img src="img\digitimes\layout\print\2023_8to12\a.jpg"style="width:100%" class="image">
 									<img src="img\digitimes\layout\print\2023_3to7\凱德PARTNER.jpg"style="width:100%">
@@ -436,6 +453,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
+									<img src="img\digitimes\layout\print\2024_7to9\B01_空白_示意.jpg"style="width:100%">
+									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_8to12\背板10-1.jpg"style="width:100%" class="image">
 									<img src="img\digitimes\layout\print\2023_3to7\1121109R1_背板.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120880新立.jpg"style="width:100%">
@@ -460,6 +479,9 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
+									<img src="img\digitimes\layout\print\2024_7to9\Z03邀請卡_正面.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2024_7to9\Z03邀請卡_背面.jpg"style="width:100%">
+									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_3to7\背板.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120835R1_2.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120421AI EXPO 學習歷程_黑.jpg"style="width:100%">
