--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -118,6 +118,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\print_ad\2024_10to12\1120全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\print_ad\2024_4to6\ic島嶼全十.jpg" style="width:100%">
 									<img src="img\digitimes\ad\print_ad\2024_4to6\1130069新竹場＿全十.jpg" style="width:100%">
@@ -133,6 +135,8 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\edm\2024_10to12\edm.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
 									<img src="img\digitimes\ad\edm\2024_1to3\智慧工廠edm.jpg" style="width:100%">
 									<!-- 2023_8 -->
@@ -141,6 +145,10 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\ad\2024_10to12\1106社群.jpg" style="width:100%">
+									<!-- 2024 7到9月 -->
+									<img src="img\digitimes\ad\ad\2024_7to9\抽獎廣告.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\ad\2024_4to6\0402_336X90.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2024_4to6\D_0402_336X280.gif" style="width:100%">
@@ -170,6 +178,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\print_ad\2024_10to12\1115全十.jpg" style="width:100%">
 									<!-- 2024 7到9月 -->
 									<img src="img\digitimes\ad\print_ad\2024_7to9\1130167全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
@@ -182,6 +192,8 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\edm\2024_10to12\EDM 2.jpg" style="width:100%">
 									<!-- 2024 7到9月 -->
 									<img src="img\digitimes\ad\edm\2024_7to9\網頁.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
@@ -192,6 +204,10 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\ad\2024_10to12\SpecialReport2社群.jpg" style="width:100%">
+									<!-- 2024 7到9月 -->
+									<img src="img\digitimes\ad\ad\2024_7to9\中秋社群.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\ad\2024_4to6\336-x-280.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2024_4to6\1131095R1.jpg" style="width:100%">
@@ -224,8 +240,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
-									<!-- 2024 7到9月 -->
-									<img src="img\digitimes\ad\print_ad\2024_7to9\全十.jpg" style="width:100%">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\print_ad\2024_10to12\1106全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\print_ad\2024_4to6\1130350_1.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
@@ -238,6 +254,8 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\edm\2024_10to12\網頁layout.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
 									<img src="img\digitimes\ad\edm\2024_4to6\EDM中文.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
@@ -248,11 +266,12 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\ad\2024_10to12\1200X1200.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\ad\2024_4to6\0416_336 x 280.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2024_4to6\0605_728x90.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2024_4to6\336x90.gif" style="width:100%">
-									<img src="img\digitimes\ad\ad\2024_4to6\1200X600.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
 									<img src="img\digitimes\ad\ad\2024_1to3\728-90.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2024_1to3\活動+.jpg" style="width:100%">
@@ -283,6 +302,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2024 7到9月 -->
+									<img src="img\digitimes\ad\print_ad\2024_7to9\全十.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\print_ad\2024_4to6\1130350_2.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
@@ -305,6 +326,8 @@
 								</div>
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2024 10到12月 -->
+									<img src="img\digitimes\ad\ad\2024_10to12\1200x1200B.jpg" style="width:100%">
 									<!-- 2024 4到6月 -->
 									<img src="img\digitimes\ad\ad\2024_4to6\1200X600.jpg" style="width:100%">
 									<!-- 2024 1到3月 -->
@@ -341,7 +364,10 @@
 		<div class="w3-row-padding tabcontent margin-right-left" id="kv">
 			<!-- 左行 -->
 			<div class="w3-third">
+				<!-- 2024_12 -->
+				<img src="img\digitimes\kv\2024_10to12\20241120Dforum.jpg" style="width:100%" class="image">
 				<!-- 2024_7 -->
+				<img src="img\digitimes\kv\2024_7to9\5b-ol.jpg" style="width:100%" class="image">
 				<img src="img\digitimes\kv\2024_7to9\桌機Banner 2.jpg" style="width:100%" class="image">
 				<!-- 2024_6 -->
 				<img src="img\digitimes\kv\2024_4to6\ic萌寵特別企劃.jpg" style="width:100%" class="image">
@@ -359,6 +385,10 @@
 						<a href="2023_tsmc_ani.html" target="_blank"><div class="text">教案動畫視覺<br>2023</div></a>
 					</div>
 				</div>
+				<!-- 2024_12 -->
+				<img src="img\digitimes\kv\2024_10to12\1132667.jpg" style="width:100%" class="image">
+				<!-- 2024_7 -->
+				<img src="img\digitimes\kv\2024_7to9\a.jpg" style="width:100%" class="image">
 				<!-- 2023_7月前 -->
 				<img src="img\digitimes\kv\2023_3to8\ASC_kv.jpg" style="width:100%" class="image">
 				<img src="img\digitimes\kv\2023_3to8\AWS-JIC_ol_修.png" style="width:100%" class="image">
@@ -368,6 +398,8 @@
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
+				<!-- 2024_12 -->
+				<img src="img\digitimes\kv\2024_10to12\20241206Dforum.jpg" style="width:100%" class="image">
 				<!-- 2024_8 -->
 				<img src="img\digitimes\kv\2024_7to9\主視覺.jpg" style="width:100%" class="image">
 				<img src="img\digitimes\kv\2024_7to9\b.jpg" style="width:100%" class="image">
@@ -403,7 +435,6 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="print">
-									<img src="img\digitimes\layout\print\2024_7to9\B01_STAFF_示意.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2024_7to9\Z05_菜單全.jpg"style="width:100%">
 									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_3to7\1121373凱德.jpg"style="width:100%">
@@ -431,7 +462,7 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="img\digitimes\layout\print\2024_7to9\B01_VIP_示意.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2024_7to9\識別證.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2024_7to9\邀請函內頁.jpg"style="width:100%">
 									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_8to12\E03-電子看板_議程.jpg"style="width:100%" class="image">
@@ -453,7 +484,7 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="img\digitimes\layout\print\2024_7to9\B01_空白_示意.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2024_7to9\邀請卡.jpg"style="width:100%">
 									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_8to12\背板10-1.jpg"style="width:100%" class="image">
 									<img src="img\digitimes\layout\print\2023_3to7\1121109R1_背板.jpg"style="width:100%">
@@ -479,8 +510,9 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="img\digitimes\layout\print\2024_7to9\Z03邀請卡_正面.jpg"style="width:100%">
-									<img src="img\digitimes\layout\print\2024_7to9\Z03邀請卡_背面.jpg"style="width:100%">
+									<!-- 2024 -->
+									<img src="img\digitimes\layout\print\2024_10to12\A11關鍵字預測牆B.jpg"style="width:100%">
+									<img src="img\digitimes\layout\print\2024_10to12\B直式.jpg"style="width:100%">
 									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_3to7\背板.jpg"style="width:100%">
 									<img src="img\digitimes\layout\print\2023_3to7\1120835R1_2.jpg"style="width:100%">
