--- a/Illustration.html
+++ b/Illustration.html
@@ -116,6 +116,12 @@
 
 			<div class="w3-third">
 				<div class="container">
+					<img src="img\Illustration\秀廚房LOGO.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<div class="text">秀廚房LOGO<br>2024</div>
+					</div>
+				</div>
+				<div class="container">
 					<img src="img\Illustration\2024花磚健保卡套.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<div class="text">花磚圖騰卡套<br>2024</div>
@@ -138,6 +144,12 @@
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
+				<div class="container">
+					<img src="img\Illustration\2024科學節佈置物layout.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<div class="text">2024科學節佈置物layout<br>2024</div>
+					</div>
+				</div>
 				<div class="container">
 					<img src="img\Illustration\黑白繪畫大賽_電繪.jpg" style="width:100%" class="image">
 				</div>
