--- a/Video.html
+++ b/Video.html
@@ -53,7 +53,7 @@
 			<a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
 			<a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
 			<a href="Prints.html" class="Bar-text-grey Button">Print</a>
-			<a href="Vedio.html" class="Bar-text-grey Button">Vedio</a>
+			<a href="Video.html" class="Bar-text-grey Button">Video</a>
 			<a href="WebDesign.html" class="Bar-text-grey Button">Web Design</a>
 		</div>
 	</nav>
@@ -78,7 +78,7 @@
 		<!-- title -->
 		<div style=" padding:50px">
 			<!-- 中文 -->
-			<h1 class="Center" style="color:#666666">Vedio</h1>
+			<h1 class="Center" style="color:#666666">Video</h1>
 		</div>
 
 		<!-- Projects Grid -->
