--- a/2023_tsmc_ani.html
+++ b/2023_tsmc_ani.html
@@ -53,7 +53,7 @@
             <a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
             <a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
             <a href="Prints.html" class="Bar-text-grey Button">Print</a>
-            <a href="Video.html" class="Bar-text-grey Button">Video</a>
+            <a href="Vedio.html" class="Bar-text-grey Button">Vedio</a>
             <a href="WebDesign.html" class="Bar-text-grey Button">Web Design</a>
         </div>
     </nav>
