--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
       <a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
       <a href="Prints.html" class="Bar-text-grey Button">Print</a>
-      <a href="Video.html" class="Bar-text-grey Button">Video</a>
+      <a href="Vedio.html" class="Bar-text-grey Button">Vedio</a>
       <a href="WebDesign.html" class="Bar-text-grey Button">Web Design</a>
     </div>
   </nav>
@@ -109,7 +109,7 @@
           <a href="GameDesign.html" class="w3-button w3-white w3-round-xxlarge index-btn" style="margin: 7px;">Game Design</a>
           <a href="Illustration.html" class="w3-button w3-white w3-round-xxlarge index-btn" style="margin: 7px;">Illustration</a>
           <a href="Prints.html" class="w3-button w3-white  w3-round-xxlarge index-btn"  style="margin: 7px;">Print</a>
-          <a href="Video.html" class="w3-button w3-white  w3-round-xxlarge index-btn"  style="margin: 7px;">Video</a>
+          <a href="Vedio.html" class="w3-button w3-white  w3-round-xxlarge index-btn"  style="margin: 7px;">Vedio</a>
           <a href="WebDesign.html" class="w3-button w3-white  w3-round-xxlarge index-btn"  style="margin: 7px;">Web Design</a>
         </div>
       </header>
