0510 下次需要輕量化檔案

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -24,9 +24,15 @@
 		}
 
 		/*圖片下邊界*/
-		.w3-row-padding img { 
-			margin-bottom: 16px;
-		 } 
+		.w3-row-padding img {
+			padding: 24px;
+			margin-bottom: 6px;
+		}
+		
+		.w3-row{
+			padding: 24px;
+		}
+
 
 		/*圖片中間間隔*/
 		.w3-row-padding,
@@ -36,8 +42,8 @@
 		.w3-row-padding>.w3-threequarter,
 		.w3-row-padding>.w3-quarter,
 		.w3-row-padding>.w3-col {
-			padding: 12px;
-		}
+			padding: 0px;
+		} 
 	</style>
 
 </head>
@@ -385,7 +391,7 @@
 
 			<!-- 分類標題 -->
 			<div class="w3-row">
-				<div class="section-title">
+				<div class="section-title rwdh6">
 					IC之音
 				</div>
 			</div>
@@ -536,7 +542,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="print">
-									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-award.jpg" style="width:100%">
+									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-award.jpg"
+										style="width:100%">
 									<img src="img\digitimes\layout\print\2024_7to9\Z05_菜單全.jpg" style="width:100%">
 									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_3to7\1121373凱德.jpg" style="width:100%">
@@ -568,7 +575,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-award入圍.jpg" style="width:100%">
+									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-award入圍.jpg"
+										style="width:100%">
 									<img src="img\digitimes\layout\print\2024_7to9\識別證.jpg" style="width:100%">
 									<img src="img\digitimes\layout\print\2024_7to9\邀請函內頁.jpg" style="width:100%">
 									<!-- 2023 -->
@@ -593,7 +601,8 @@
 							<div class="w3-quarter" style=" padding: 20px;">
 								<!-- print -->
 								<div class="ly_item" data-cat="Main">
-									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-瓶貼.jpg" style="width:100%">
+									<img src="img\digitimes\layout\print\2025_1to3\2025aiexpo-瓶貼.jpg"
+										style="width:100%">
 									<img src="img\digitimes\layout\print\2024_7to9\邀請卡.jpg" style="width:100%">
 									<!-- 2023 -->
 									<img src="img\digitimes\layout\print\2023_8to12\背板10-1.jpg" style="width:100%"
