--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     .w3-row-padding>.w3-threequarter,
     .w3-row-padding>.w3-quarter,
     .w3-row-padding>.w3-col {
-      padding: 12px;
+      padding: 0px;
     }
 
   </style>
@@ -123,7 +123,7 @@
           <!-- About Grid -->
           <div class="w3-row">
             <div class="w3-half">
-              <img src="img/photo.jpg" class="w3-round image" alt="Table"
+              <img src="img/photo2025.jpg" class="w3-round image" alt="Table"
                 style="width:100%; margin:auto; padding:50px;">
             </div>
             <div class="w3-half" style=" padding:20px">
